Set up the bones of the first simulation.

--- a/pull.html
+++ b/pull.html
@@ -22,7 +22,10 @@
 <h3><a name="chap1">Basic Player Engagement</a></h3>
 <h4><a name="chap1a">Stimulation</a></h4>
 <p>This is our first simulation and it’s pretty simple. Just click on the players to engage them. Different players require different amounts of engagement. If a player receives too little stimulation, they will get bored and leave. If they receive too much, they will be overstimulated and will leave.</p>
-<canvas id="sim1" width="640px" height="480px" align="center"></canvas>
+<table><tr>
+    <td><canvas id="sim1" width="480px" height="320px" align="center"></canvas></td>
+    <td><button id="sim1Inter1">Interact!</button>
+</tr></table>
 <h4><a name="chap1b">On The Simplifications of the Article</a></h4>
 <p>This is an obvious and gross simplification of player retention. I can see at least the following false assumptions:<ul>
     <li><b>Players retain as long as they are engaged</b> - This just is not something that you can guarantee. Players will leave sometimes even if they are still having fun with your game. They only have so much time in a day.</li>
