--- a/pull.html
+++ b/pull.html
@@ -53,7 +53,9 @@
     </td>
     <td>
       <p>Engagemement per second</p>
-      <input id="input2" type="range" min="0" max="30" value="0">
+      <input id="input2_1" type="range" min="0" max="30" value="0">
+      <p>Zoom</p>
+      <input id="input2_2" type="range" min="1" max="5" value="1">
 </td></tr></table>
 <h3><a name="chap3">Pull Systems</a></h3>
 <p>This article is actually only going to focus on one specific kind of engagement system. We’re going to look at a couple of pull algorithms, or algorithms for giving players pieces in a random or semi-random way.</p>
