Put in a boredom slider.

--- a/pull.html
+++ b/pull.html
@@ -61,6 +61,8 @@
       <input id="input2_eps" type="range" min="0" max="30" value="0">
       <p>Zoom</p>
       <input id="input2_zoom" type="range" min="1" max="5" value="1">
+      <p>Boredom Factor</p>
+      <input id="input2_bore" type="range" min="0" max="5" value="1">
 </td></tr></table>
 <h3><a name="chap3">Pull Systems</a></h3>
 <h4><a name="chap3a">Simple Simulation</a></h4>
@@ -78,6 +80,8 @@
       <input id="input3_eps" type="range" min="0" max="30" value="0">
       <p>Zoom</p>
       <input id="input3_zoom" type="range" min="1" max="5" value="1">
+      <p>Boredom Factor</p>
+      <input id="input3_bore" type="range" min="0" max="5" value="1">
       <p>Number of Pieces</p>
       <input id="input3_count" type="range" min="100" max="500" value="100" step="10">
       <p>Value of New Piece</p>
@@ -115,6 +119,8 @@
       <input id="input3b_eps" type="range" min="0" max="30" value="0">
       <p>Zoom</p>
       <input id="input3b_zoom" type="range" min="1" max="5" value="1">
+      <p>Boredom Factor</p>
+      <input id="input3b_bore" type="range" min="0" max="5" value="1">
       <br />
       <br />
       <p>Average Number of Pulls: <span id="data3b_1"></span></p>
@@ -135,6 +141,8 @@
       <input id="input5_eps" type="range" min="0" max="30" value="0">
       <p>Zoom</p>
       <input id="input5_zoom" type="range" min="1" max="5" value="1">
+      <p>Boredom Factor</p>
+      <input id="input5_bore" type="range" min="0" max="5" value="1">
       <p>Number of Old Pieces</p>
       <input id="input5_count" type="range" min="100" max="500" value="100" step="10">
       <p>Number of New Pieces</p>
@@ -168,6 +176,8 @@
       <input id="input6a_eps" type="range" min="0" max="30" value="0">
       <p>Zoom</p>
       <input id="input6a_zoom" type="range" min="1" max="5" value="1">
+      <p>Boredom Factor</p>
+      <input id="input6a_bore" type="range" min="0" max="5" value="1">
       <p>Number of Pieces</p>
       <input id="input6a_count" type="range" min="100" max="500" value="100" step="10">
       <p>Value of New Piece</p>
@@ -195,6 +205,8 @@
       <input id="input6b_eps" type="range" min="0" max="30" value="0">
       <p>Zoom</p>
       <input id="input6b_zoom" type="range" min="1" max="5" value="1">
+      <p>Boredom Factor</p>
+      <input id="input6b_bore" type="range" min="0" max="5" value="1">
       <p>Number of Pieces</p>
       <input id="input6b_count" type="range" min="100" max="500" value="100" step="10">
       <p>Value of New Piece</p>
@@ -224,12 +236,14 @@
       <input id="input6c_eps" type="range" min="0" max="30" value="0">
       <p>Zoom</p>
       <input id="input6c_zoom" type="range" min="1" max="5" value="1">
+      <p>Boredom Factor</p>
+      <input id="input6c_bore" type="range" min="0" max="5" value="1">
       <p>Number of Old Pieces</p>
-      <input id="input5_count" type="range" min="100" max="500" value="100" step="10">
+      <input id="input6c_count" type="range" min="100" max="500" value="100" step="10">
       <p>Number of New Pieces</p>
-      <input id="input5_newCount" type="range" min="0" max="500" value="100" step="10">
+      <input id="input6c_newCount" type="range" min="0" max="500" value="100" step="10">
       <p>Starting Number of Pulls</p>
-      <input id="input5_startPulls" type="range" min="0" max="2000" value="0" step="50">
+      <input id="input6c_startPulls" type="range" min="0" max="2000" value="0" step="50">
       <p>Value of New Piece</p>
       <input id="input6c_newVal" type="range" min="0" max="5" value="2">
       <p>Value of Duplicate Piece</p>
