Labeled the sliders.

--- a/pull.html
+++ b/pull.html
@@ -58,11 +58,11 @@
     </td>
     <td>
       <p>Engagemement per second</p>
-      <input id="input2_eps" type="range" min="0" max="30" value="0">
+      <input id="input2_eps" type="range" min="0" max="30" value="0"><span id="disp2_eps">0</span>
       <p>Zoom</p>
-      <input id="input2_zoom" type="range" min="1" max="5" value="1">
+      <input id="input2_zoom" type="range" min="1" max="5" value="1"><span id="disp2_zoom">1</span>
       <p>Boredom Factor</p>
-      <input id="input2_bore" type="range" min="0" max="5" value="1">
+      <input id="input2_bore" type="range" min="0" max="5" value="1"><span id="disp2_bore">1</span>
 </td></tr></table>
 <h3><a name="chap3">Pull Systems</a></h3>
 <h4><a name="chap3a">Simple Simulation</a></h4>
@@ -77,17 +77,17 @@
     </td>
     <td>
       <p>Pulls per second</p>
-      <input id="input3_eps" type="range" min="0" max="30" value="0">
+      <input id="input3_eps" type="range" min="0" max="30" value="0"><span id="disp3_eps">0</span>
       <p>Zoom</p>
-      <input id="input3_zoom" type="range" min="1" max="5" value="1">
+      <input id="input3_zoom" type="range" min="1" max="5" value="1"><span id="disp3_zoom">1</span>
       <p>Boredom Factor</p>
-      <input id="input3_bore" type="range" min="0" max="5" value="1">
+      <input id="input3_bore" type="range" min="0" max="5" value="1"><span id="disp3_bore">1</span>
       <p>Number of Pieces</p>
-      <input id="input3_count" type="range" min="100" max="500" value="100" step="10">
+      <input id="input3_count" type="range" min="100" max="500" value="100" step="10"><span id="disp3_count">100</span>
       <p>Value of New Piece</p>
-      <input id="input3_newVal" type="range" min="0" max="5" value="2">
+      <input id="input3_newVal" type="range" min="0" max="5" value="2"><span id="disp3_newVal">2</span>
       <p>Value of Duplicate Piece</p>
-      <input id="input3_oldVal" type="range" min="0" max="5" value="0">
+      <input id="input3_oldVal" type="range" min="0" max="5" value="0"><span id="disp3_oldVal">0</span>
       <br />
       <br />
       <p>Average Number of Pulls: <span id="data3_1"></span></p>
@@ -116,11 +116,11 @@
     </td>
     <td>
       <p>Pulls per second</p>
-      <input id="input3b_eps" type="range" min="0" max="30" value="0">
+      <input id="input3b_eps" type="range" min="0" max="30" value="0"><span id="disp3b_eps">0</span>
       <p>Zoom</p>
-      <input id="input3b_zoom" type="range" min="1" max="5" value="1">
+      <input id="input3b_zoom" type="range" min="1" max="5" value="1"><span id="disp3b_zoom">1</span>
       <p>Boredom Factor</p>
-      <input id="input3b_bore" type="range" min="0" max="5" value="1">
+      <input id="input3b_bore" type="range" min="0" max="5" value="1"><span id="disp3b_bore">1</span>
       <br />
       <br />
       <p>Average Number of Pulls: <span id="data3b_1"></span></p>
@@ -138,21 +138,21 @@
     </td>
     <td>
       <p>Pulls per second</p>
-      <input id="input5_eps" type="range" min="0" max="30" value="0">
+      <input id="input5_eps" type="range" min="0" max="30" value="0"><span id="disp5_eps">0</span>
       <p>Zoom</p>
-      <input id="input5_zoom" type="range" min="1" max="5" value="1">
+      <input id="input5_zoom" type="range" min="1" max="5" value="1"><span id="disp5_zoom">1</span>
       <p>Boredom Factor</p>
-      <input id="input5_bore" type="range" min="0" max="5" value="1">
+      <input id="input5_bore" type="range" min="0" max="5" value="1"><span id="disp5_bore">1</span>
       <p>Number of Old Pieces</p>
-      <input id="input5_count" type="range" min="100" max="500" value="100" step="10">
+      <input id="input5_count" type="range" min="100" max="500" value="100" step="10"><span id="disp5_count">100</span>
       <p>Number of New Pieces</p>
-      <input id="input5_newCount" type="range" min="0" max="500" value="100" step="10">
+      <input id="input5_newCount" type="range" min="0" max="500" value="100" step="10"><span id="disp5_newCount">100</span>
       <p>Starting Number of Pulls</p>
-      <input id="input5_startPulls" type="range" min="0" max="2000" value="0" step="50">
+      <input id="input5_startPulls" type="range" min="0" max="2000" value="0" step="50"><span id="disp5_startPulls">0</span>
       <p>Value of New Piece</p>
-      <input id="input5_newVal" type="range" min="0" max="5" value="2">
+      <input id="input5_newVal" type="range" min="0" max="5" value="2"><span id="disp5_newVal">2</span>
       <p>Value of Duplicate Piece</p>
-      <input id="input5_oldVal" type="range" min="0" max="5" value="0">
+      <input id="input5_oldVal" type="range" min="0" max="5" value="0"><span id="disp5_oldVal">0</span>
       <br />
       <br />
       <p>Average Number of Pulls: <span id="data5_1"></span></p>
@@ -173,17 +173,17 @@
     </td>
     <td>
       <p>Pulls per second</p>
-      <input id="input6a_eps" type="range" min="0" max="30" value="0">
+      <input id="input6a_eps" type="range" min="0" max="30" value="0"><span id="disp6a_eps">0</span>
       <p>Zoom</p>
-      <input id="input6a_zoom" type="range" min="1" max="5" value="1">
+      <input id="input6a_zoom" type="range" min="1" max="5" value="1"><span id="disp6a_zoom">1</span>
       <p>Boredom Factor</p>
-      <input id="input6a_bore" type="range" min="0" max="5" value="1">
+      <input id="input6a_bore" type="range" min="0" max="5" value="1"><span id="disp6a_bore">1</span>
       <p>Number of Pieces</p>
-      <input id="input6a_count" type="range" min="100" max="500" value="100" step="10">
+      <input id="input6a_count" type="range" min="100" max="500" value="100" step="10"><span id="disp6a_count">100</span>
       <p>Value of New Piece</p>
-      <input id="input6a_newVal" type="range" min="0" max="5" value="2">
+      <input id="input6a_newVal" type="range" min="0" max="5" value="2"><span id="disp6a_newVal">2</span>
       <p>Value of Duplicate Piece</p>
-      <input id="input6a_oldVal" type="range" min="0" max="5" value="0">
+      <input id="input6a_oldVal" type="range" min="0" max="5" value="0"><span id="disp6a_oldVal">0</span>
       <br />
       <br />
       <p>Average Number of Pulls: <span id="data6a_1"></span></p>
@@ -202,19 +202,19 @@
     </td>
     <td>
       <p>Pulls per second</p>
-      <input id="input6b_eps" type="range" min="0" max="30" value="0">
+      <input id="input6b_eps" type="range" min="0" max="30" value="0"><span id="disp6b_eps">0</span>
       <p>Zoom</p>
-      <input id="input6b_zoom" type="range" min="1" max="5" value="1">
+      <input id="input6b_zoom" type="range" min="1" max="5" value="1"><span id="disp6b_zoom">1</span>
       <p>Boredom Factor</p>
-      <input id="input6b_bore" type="range" min="0" max="5" value="1">
+      <input id="input6b_bore" type="range" min="0" max="5" value="1"><span id="disp6b_bore">1</span>
       <p>Number of Pieces</p>
-      <input id="input6b_count" type="range" min="100" max="500" value="100" step="10">
+      <input id="input6b_count" type="range" min="100" max="500" value="100" step="10"><span id="disp6b_count">100</span>
       <p>Value of New Piece</p>
-      <input id="input6b_newVal" type="range" min="0" max="5" value="2">
+      <input id="input6b_newVal" type="range" min="0" max="5" value="2"><span id="disp6b_newVal">2</span>
       <p>Value of Duplicate Piece</p>
-      <input id="input6b_oldVal" type="range" min="0" max="5" value="0">
+      <input id="input6b_oldVal" type="range" min="0" max="5" value="0"><span id="disp6b_oldVal">0</span>
       <p>Bad Pull Cap</p>
-      <input id="input6b_pullCap" type="range" min="0" max="250" value="0" step="10">
+      <input id="input6b_pullCap" type="range" min="0" max="250" value="0" step="10"><span id="disp6b_pullCap">0</span>
       <br />
       <br />
       <p>Average Number of Pulls: <span id="data6b_1"></span></p>
@@ -233,21 +233,21 @@
     </td>
     <td>
       <p>Pulls per second</p>
-      <input id="input6c_eps" type="range" min="0" max="30" value="0">
+      <input id="input6c_eps" type="range" min="0" max="30" value="0"><span id="disp6c_eps">0</span>
       <p>Zoom</p>
-      <input id="input6c_zoom" type="range" min="1" max="5" value="1">
+      <input id="input6c_zoom" type="range" min="1" max="5" value="1"><span id="disp6c_zoom">1</span>
       <p>Boredom Factor</p>
-      <input id="input6c_bore" type="range" min="0" max="5" value="1">
+      <input id="input6c_bore" type="range" min="0" max="5" value="1"><span id="disp6c_bore">1</span>
       <p>Number of Old Pieces</p>
-      <input id="input6c_count" type="range" min="100" max="500" value="100" step="10">
+      <input id="input6c_count" type="range" min="100" max="500" value="100" step="10"><span id="disp6c_count">100</span>
       <p>Number of New Pieces</p>
-      <input id="input6c_newCount" type="range" min="0" max="500" value="100" step="10">
+      <input id="input6c_newCount" type="range" min="0" max="500" value="100" step="10"><span id="disp6c_newCount">100</span>
       <p>Starting Number of Pulls</p>
-      <input id="input6c_startPulls" type="range" min="0" max="2000" value="0" step="50">
+      <input id="input6c_startPulls" type="range" min="0" max="2000" value="0" step="50"><span id="disp6c_startPulls">0</span>
       <p>Value of New Piece</p>
-      <input id="input6c_newVal" type="range" min="0" max="5" value="2">
+      <input id="input6c_newVal" type="range" min="0" max="5" value="2"><span id="disp6c_newVal">2</span>
       <p>Value of Duplicate Piece</p>
-      <input id="input6c_oldVal" type="range" min="0" max="5" value="0">
+      <input id="input6c_oldVal" type="range" min="0" max="5" value="0"><span id="disp6c_oldVal">0</span>
       <br />
       <br />
       <p>Average Number of Pulls: <span id="data6c_1"></span></p>
