--- a/pull.html
+++ b/pull.html
@@ -258,4 +258,4 @@
 <h3><a name="conclusion">Conclusion</a></h3>
 <p>This is, of course, a very incomplete taxonomy. Hopefully though, it lets you think about how players interact with the pull systems that you have made and the potential problems and benefits of these solutions.</p>
 <p>You can look through the source code here - </p>
-<p>If you have any feedback on this or if you want to see more things like this, you can reach me on Twitter at <a href="">@murthynikhil</a>. If you make any new simulations like this, please do tell me. I’d love to see more explanations like this. Also, if you want to support this work, you can do so here - [patreon]</p>
+<p>If you have any feedback on this or if you want to see more things like this, you can reach me on Twitter at <a href="https://twitter.com/murthynikhil">@murthynikhil</a>. If you make any new simulations like this, please do tell me. I’d love to see more explanations like this.</p>
